[package]
name = "haki-dl"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["bakgio"]
license = "MIT OR Apache-2.0"
description = "A Rust downloader library and CLI foundation."
repository = "https://github.com/bakgio/haki-dl"
readme = "README.md"
keywords = ["downloader", "m3u8", "mpd", "cli"]
categories = ["command-line-utilities"]
exclude = [".github/**", "tests/**"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["cli", "mp4forge"]
cli = ["dep:crossterm"]
mp4forge = ["dep:mp4forge"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
roxmltree = "0.21.1"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "http2", "gzip", "deflate", "brotli", "zstd", "socks"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "fs", "io-util", "process", "sync", "time"] }
regex = "1"
encoding_rs = "0.8"
flate2 = "1"
brotli = "8"
ctrlc = "3.4"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
ecb = { version = "0.1", features = ["alloc"] }
cipher = "0.4"
chacha20 = "0.9"
time = { version = "0.3", features = ["local-offset"] }
md-5 = "0.10"
crossterm = { version = "0.29.0", optional = true }
mp4forge = { version = "0.8.0", default-features = false, features = ["async", "decrypt", "mux"], optional = true }

[target.'cfg(windows)'.dependencies]
interprocess = { version = "2.4", default-features = false }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
zstd = "0.13"
